<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E5E5E5"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            tools:context=".presentation.fragment.FilterFragment">

                <TextView
                    android:id="@+id/page_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="113dp"
                    android:fontFamily="@font/avenir_black"
                    android:text="@string/page_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/hearthstone_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/page_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/page_title"
                    app:layout_constraintTop_toTopOf="@id/page_title"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/text_classes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/classes_filter"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/button_druid"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_druid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/filter_druid"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:translationZ="90dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_druid"
                    app:layout_constraintEnd_toEndOf="@id/button_druid"
                    app:layout_constraintStart_toStartOf="@id/button_druid"
                    app:layout_constraintTop_toTopOf="@id/button_druid" />

                <Button
                    android:id="@+id/button_druid"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/filter_block"
                    android:backgroundTint="@color/colorClasses"
                    android:elevation="10dp"
                    app:layout_constraintEnd_toStartOf="@id/button_hunter"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/page_title" />

                <TextView
                    android:id="@+id/text_hunter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/filter_hunter"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:translationZ="90dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_hunter"
                    app:layout_constraintEnd_toEndOf="@id/button_hunter"
                    app:layout_constraintStart_toStartOf="@id/button_hunter"
                    app:layout_constraintTop_toTopOf="@id/button_hunter" />

                <Button
                    android:id="@+id/button_hunter"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/filter_block"
                    android:backgroundTint="@color/colorClasses"
                    android:elevation="10dp"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/button_druid"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/button_druid"
                    app:layout_constraintTop_toTopOf="@id/button_druid" />

                <TextView
                    android:id="@+id/text_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/types_filter"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/button_spell"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_spell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/filter_spell"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:translationZ="90dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_spell"
                    app:layout_constraintEnd_toEndOf="@id/button_spell"
                    app:layout_constraintStart_toStartOf="@id/button_spell"
                    app:layout_constraintTop_toTopOf="@id/button_spell" />

                <Button
                    android:id="@+id/button_spell"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/filter_block"
                    android:backgroundTint="@color/colorTypes"
                    android:elevation="10dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toStartOf="@id/button_weapon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_druid" />

                <TextView
                    android:id="@+id/text_weapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/filter_weapon"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:translationZ="90dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_weapon"
                    app:layout_constraintEnd_toEndOf="@id/button_weapon"
                    app:layout_constraintStart_toStartOf="@id/button_weapon"
                    app:layout_constraintTop_toTopOf="@id/button_weapon" />

                <Button
                    android:id="@+id/button_weapon"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/filter_block"
                    android:backgroundTint="@color/colorTypes"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_spell"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/button_spell"
                    app:layout_constraintTop_toTopOf="@id/button_spell" />

                <TextView
                    android:id="@+id/text_qualities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/qualities_filter"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/button_common"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_common"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/filter_common"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:translationZ="90dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_common"
                    app:layout_constraintEnd_toEndOf="@id/button_common"
                    app:layout_constraintStart_toStartOf="@id/button_common"
                    app:layout_constraintTop_toTopOf="@id/button_common" />

                <Button
                    android:id="@+id/button_common"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/filter_block"
                    android:backgroundTint="@color/colorQualities"
                    android:elevation="10dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toStartOf="@id/button_epic"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_spell" />

                <TextView
                    android:id="@+id/text_epic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_roman"
                    android:text="@string/filter_epic"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:translationZ="90dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_epic"
                    app:layout_constraintEnd_toEndOf="@id/button_epic"
                    app:layout_constraintStart_toStartOf="@id/button_epic"
                    app:layout_constraintTop_toTopOf="@id/button_epic" />

                <Button
                    android:id="@+id/button_epic"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:background="@drawable/filter_block"
                    android:backgroundTint="@color/colorQualities"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/button_common"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/button_common"
                    app:layout_constraintTop_toTopOf="@id/button_common" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
