<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_screen_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5E5E5"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        tools:context=".presentation.fragment.DetailsFragment">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_circle"
            android:scaleType="centerInside"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar_details"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/card_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerInside"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            tools:text="Name"/>

        <TextView
            android:id="@+id/text_flavor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/flavor"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name"/>

        <TextView
            android:id="@+id/text_flavor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/text_flavor_title"
            app:layout_constraintStart_toEndOf="@id/text_flavor_title"
            app:layout_constraintTop_toTopOf="@id/text_flavor_title"
            tools:text="Flavor"/>

        <TextView
            android:id="@+id/text_set_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_flavor_title"
            android:text="@string/set"/>

        <TextView
            android:id="@+id/text_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/text_set_title"
            app:layout_constraintStart_toEndOf="@id/text_set_title"
            app:layout_constraintTop_toTopOf="@id/text_set_title"
            tools:text="Set"/>

        <TextView
            android:id="@+id/text_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_set_title"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/text_type_title"
            app:layout_constraintStart_toEndOf="@id/text_type_title"
            app:layout_constraintTop_toTopOf="@id/text_type_title"
            tools:text="Type"/>

        <TextView
            android:id="@+id/text_faction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_type_title"
            android:text="@string/faction"/>

        <TextView
            android:id="@+id/text_faction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/text_faction_title"
            app:layout_constraintStart_toEndOf="@id/text_faction_title"
            app:layout_constraintTop_toTopOf="@id/text_faction_title"
            tools:text="Faction"/>

        <TextView
            android:id="@+id/text_rarity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_faction_title"
            android:text="@string/rarity"/>

        <TextView
            android:id="@+id/text_rarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/text_rarity_title"
            app:layout_constraintStart_toEndOf="@id/text_rarity_title"
            app:layout_constraintTop_toTopOf="@id/text_rarity_title"
            tools:text="Rarity"/>

        <TextView
            android:id="@+id/text_attack_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_rarity_title"
            android:text="@string/attack"/>

        <TextView
            android:id="@+id/text_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/text_attack_title"
            app:layout_constraintStart_toEndOf="@id/text_attack_title"
            app:layout_constraintTop_toTopOf="@id/text_attack_title"
            tools:text="Attack"/>

        <TextView
            android:id="@+id/text_cost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_attack_title"
            android:text="@string/cost"/>

        <TextView
            android:id="@+id/text_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/text_cost_title"
            app:layout_constraintStart_toEndOf="@id/text_cost_title"
            app:layout_constraintTop_toTopOf="@id/text_cost_title"
            tools:text="Cost"/>

        <TextView
            android:id="@+id/text_health_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_cost_title"
            android:text="@string/health"/>

        <TextView
            android:id="@+id/text_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/text_health_title"
            app:layout_constraintStart_toEndOf="@id/text_health_title"
            app:layout_constraintTop_toTopOf="@id/text_health_title"
            tools:text="Health"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>